feat : added worker queues and listeners to consume the message

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,12 @@ AWS_DEFAULT_REGION=
 # SQS
 SQS_JOB_PROCESSING_QUEUE_URL=
 SQS_JOB_VERIFICATION_QUEUE_URL=
+SQS_JOB_HANDLE_FAILURE_QUEUE_URL=
+SQS_SNOS_WORKER_TRIGGER_QUEUE_URL=
+SQS_PROVING_WORKER_TRIGGER_QUEUE_URL=
+SQS_PROOF_REGISTRATION_WORKER_TRIGGER_QUEUE_URL=
+SQS_DATA_SUBMISSION_WORKER_TRIGGER_QUEUE=
+SQS_UPDATE_STATE_WORKER_TRIGGER_QUEUE=
 
 # S3
 AWS_S3_BUCKET_NAME=
