--- a/.env.test
+++ b/.env.test
@@ -8,6 +8,8 @@ AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 SQS_JOB_PROCESSING_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_processing_queue"
 SQS_JOB_VERIFICATION_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_verification_queue"
 AWS_DEFAULT_REGION="localhost"
+AWS_SNS_REGION="us-east-1"
+AWS_SNS_ARN=
 
 ##### On chain config #####
 
