update: new creator for SqsQueue

--- a/.env.test
+++ b/.env.test
@@ -18,12 +18,16 @@ AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
 ##### QUEUE #####
 
 QUEUE_PROVIDER="sqs"
+QUEUE_BASE_URL = "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000"
 SQS_JOB_PROCESSING_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_processing_queue"
 SQS_JOB_VERIFICATION_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_verification_queue"
 SQS_JOB_HANDLE_FAILURE_QUEUE_URL=
 SQS_WORKER_TRIGGER_QUEUE_URL=
 
 ##### DATABASE #####
+AWS_DEFAULT_REGION="localhost"
+
+##### On chain config #####
 
 DATABASE="mongodb"
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
