update: handling trailing slash

--- a/.env.test
+++ b/.env.test
@@ -18,6 +18,7 @@ AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
 ##### QUEUE #####
 
 QUEUE_PROVIDER="sqs"
+# Add without trailing slash, to be handled wherever used.
 QUEUE_BASE_URL = "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000"
 SQS_JOB_PROCESSING_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_processing_queue"
 SQS_JOB_VERIFICATION_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_verification_queue"
