update: handling trailing slash

--- a/.env.test
+++ b/.env.test
@@ -6,6 +6,7 @@ AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 AWS_DEFAULT_REGION="localhost"
 
 #### QUEUE ####
+# Add without trailing slash, to be handled wherever used.
 QUEUE_BASE_URL = "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000"
 
 ##### On chain config #####
