--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
+##### AWS config #####
+
 AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
 AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
 AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
