update: working localstack sqs setup

--- a/.env.test
+++ b/.env.test
@@ -8,6 +8,8 @@ PORT=3000
 AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
 AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
 AWS_REGION="us-east-1"
+AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
+AWS_S3_BUCKET_REGION="us-east-1"
 AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 
 ##### STORAGE #####
@@ -16,7 +18,6 @@ DATA_STORAGE="s3"
 AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
 
 ##### QUEUE #####
-
 QUEUE_PROVIDER="sqs"
 # Add without trailing slash, to be handled wherever used.
 QUEUE_BASE_URL = "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000"
