feat : updated tests with alerts module mock

--- a/.env.test
+++ b/.env.test
@@ -26,4 +26,5 @@ DA_LAYER="ethereum"
 PROVER_SERVICE="sharp"
 SETTLEMENT_LAYER="ethereum"
 DATA_STORAGE="s3"
+ALERTS="sns"
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
