--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ authors = ["Apoorv Sadana <@apoorvsadana>"]
 num = { version = "0.4.1" }
 async-trait = { version = "0.1.77" }
 alloy = { version = "0.1.2", features = ["full", "node-bindings"] }
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
+aws-sdk-sqs = "1.36.0"
 axum = { version = "0.7.4" }
 axum-macros = "0.4.1"
 bincode = "1.3.3"
