--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -5,8 +5,14 @@ edition = "2021"
 
 [dependencies]
 alloy.workspace = true
+async-trait.workspace = true
+aws-config.workspace = true
+aws-sdk-s3.workspace = true
+aws-sdk-sqs.workspace = true
+color-eyre.workspace = true
 dotenvy.workspace = true
 httpmock.workspace = true
+log = "0.4.21"
 orchestrator.workspace = true
 reqwest = { workspace = true, features = ["json"] }
 serde_json.workspace = true
@@ -18,4 +24,4 @@ url.workspace = true
 
 [[test]]
 name = "test_samples"
-path = "test_samples.rs"
+path = "tests.rs"
