feat : added test for alerts and added logs at queue level

--- a/.env.test
+++ b/.env.test
@@ -9,7 +9,8 @@ SQS_JOB_PROCESSING_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:45
 SQS_JOB_VERIFICATION_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_verification_queue"
 AWS_DEFAULT_REGION="localhost"
 AWS_SNS_REGION="us-east-1"
-AWS_SNS_ARN=
+AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
+AWS_SNS_ARN_NAME="madara-orchestrator-arn"
 
 ##### On chain config #####
 
