--- a/.env.example
+++ b/.env.example
@@ -24,15 +24,16 @@ MONGODB_CONNECTION_STRING=
 # AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+AWS_REGION=
+AWS_ENDPOINT_URL=
 
 # SQS
+QUEUE_PROVIDER =
 SQS_JOB_PROCESSING_QUEUE_URL=
 SQS_JOB_VERIFICATION_QUEUE_URL=
 
 # S3
 AWS_S3_BUCKET_NAME=
-AWS_S3_BUCKET_REGION=
 
 # Sharp Services
 SHARP_CUSTOMER_ID=
