--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,8 @@
+##### ORCHESTRATOR #####
+
+HOST=
+PORT=
+
 ##### AWS CONFIG #####
 
 AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
@@ -12,12 +17,13 @@ AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
 
 ##### QUEUE #####
 
-QUEUE_PROVIDER = "sqs"
+QUEUE_PROVIDER="sqs"
 SQS_JOB_PROCESSING_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_processing_queue"
 SQS_JOB_VERIFICATION_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/madara_orchestrator_job_verification_queue"
 
 ##### DATABASE #####
 
+DATABASE="mongodb"
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
 
 ##### PROVER #####
