--- a/.env.test
+++ b/.env.test
@@ -7,7 +7,7 @@ PORT=
 
 AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
 AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
-AWS_REGION="localhost"
+AWS_REGION="us-east-1"
 AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 
 ##### STORAGE #####
