--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,10 +2,11 @@
 name: Workflow - Pull Request
 
 on:
-  pull_request_target:
-    branches: [main]
+  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   linters:
