--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,7 +3,8 @@ name: Rust Test & Coverage
 on:
   workflow_call:
     secrets:
-      ETHEREUM_BLAST_RPC_URL: ${{ secrets.ETHEREUM_BLAST_RPC_URL }}
+      ETHEREUM_BLAST_RPC_URL:
+        required: true
   workflow_dispatch:
 
 jobs:
