feat : updated implementation temp

--- a/.env.test
+++ b/.env.test
@@ -15,6 +15,7 @@ AWS_DEFAULT_REGION="localhost"
 
 MADARA_RPC_URL="http://localhost:3000"
 ETHEREUM_RPC_URL="http://localhost:3001"
+ETHEREUM_MAINNET_RPC_URL="https://mainnet.infura.io/v3/bf9e41563a6a45e28eb60382d85ef3c9" # for forking during tests
 MEMORY_PAGES_CONTRACT_ADDRESS="0x000000000000000000000000000000000001dead"
 PRIVATE_KEY="0xdead"
 # Private key of Test wallet provided by Anvil
