--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,6 +39,9 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Start Docker service
+        run: sudo systemctl start docker
+
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
 
