--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -21,6 +21,7 @@ snos = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
 utils = { workspace = true }
+log = "0.4.21"
 
 [dev-dependencies]
 tokio-test = "*"
