--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,15 +24,19 @@ authors = ["Apoorv Sadana <@apoorvsadana>"]
 [workspace.dependencies]
 num = { version = "0.4.1" }
 async-trait = { version = "0.1.77" }
-alloy = { version = "0.2.1", features = ["full",
+alloy = { version = "0.2.1", features = [
+  "full",
   "node-bindings",
   "rpc-types-debug",
   "rpc-types-trace",
   "json-rpc",
-  "rpc-client",] }
+  "rpc-client",
+] }
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
-aws-sdk-eventbridge = { version = "1.41.0", features = ["behavior-version-latest"] }
+aws-sdk-eventbridge = { version = "1.41.0", features = [
+  "behavior-version-latest",
+] }
 aws-sdk-sqs = "1.36.0"
 axum = { version = "0.7.4" }
 axum-macros = "0.4.1"
