--- a/.env.test
+++ b/.env.test
@@ -26,6 +26,9 @@ SQS_WORKER_TRIGGER_QUEUE_URL="http://sqs.us-east-1.localhost.localstack.cloud:45
 
 ##### SNS #####
 ALERTS="sns"
+AWS_SNS_REGION="us-east-1"
+AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
+AWS_SNS_ARN_NAME="madara-orchestrator-arn"
 
 ##### DATABASE #####
 
@@ -46,7 +49,7 @@ SHARP_PROOF_LAYOUT="small"
 ##### ON CHAIN CONFIG #####
 
 DA_LAYER="ethereum"
-SETTLEMENT_LAYER="ethereum_test"
+SETTLEMENT_LAYER="ethereum"
 SETTLEMENT_RPC_URL="http://localhost:3001"
 MADARA_RPC_URL="http://localhost:3000"
 L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
@@ -57,6 +60,7 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C
 DEFAULT_L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
 TEST_DUMMY_CONTRACT_ADDRESS="0xE5b6F5e695BA6E4aeD92B68c4CC8Df1160D69A81"
 STARKNET_OPERATOR_ADDRESS="0x2C169DFe5fBbA12957Bdd0Ba47d9CEDbFE260CA7"
+ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.public.blastapi.io"
 
 ##### E2E test vars #####
 
