--- a/.env.test
+++ b/.env.test
@@ -50,9 +50,10 @@ SHARP_PROOF_LAYOUT="small"
 ##### ON CHAIN CONFIG #####
 
 DA_LAYER="ethereum"
-SETTLEMENT_LAYER="ethereum_test"
-SETTLEMENT_RPC_URL="http://localhost:3001"
-MADARA_RPC_URL="http://localhost:3000"
+SETTLEMENT_LAYER="ethereum"
+SETTLEMENT_RPC_URL="https://eth-mainnet.public.blastapi.io"
+MADARA_RPC_URL="http://localhost:5000"
+ETHEREUM_RPC_URL="https://eth-mainnet.public.blastapi.io"
 L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
 MEMORY_PAGES_CONTRACT_ADDRESS="0x47312450B3Ac8b5b8e247a6bB6d523e7605bDb60"
 PRIVATE_KEY="0xdead"
