--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,9 +4,9 @@ name: Workflow - Pull Request
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main]
+    branches: [ main ]
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   linters:
@@ -30,5 +30,5 @@ jobs:
   e2e-test:
     name: E2E test
     uses: ./.github/workflows/e2e-test.yml
-    needs: coverage
+    needs: rust_build
     secrets: inherit
