update: adoption of sns and testbuilderconfig

--- a/.env.test
+++ b/.env.test
@@ -11,6 +11,7 @@ AWS_REGION="us-east-1"
 AWS_S3_BUCKET_REGION="us-east-1"
 AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 AWS_DEFAULT_REGION="localhost"
+AWS_MAX_ATTEMPTS=500
 
 ##### STORAGE #####
 
