--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -46,7 +46,7 @@ num-bigint = { workspace = true }
 num-traits = { workspace = true }
 omniqueue = { workspace = true, optional = true }
 prover-client-interface = { workspace = true }
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { workspace = true, features = ["blocking"] }
 rstest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
