--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -49,15 +49,16 @@ num = { workspace = true }
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
 omniqueue = { workspace = true, optional = true }
+prove_block = { workspace = true }
 prover-client-interface = { workspace = true }
 rstest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 settlement-client-interface = { workspace = true }
 sharp-service = { workspace = true }
-snos = { workspace = true }
 starknet = { workspace = true }
 starknet-core = "0.9.0"
+starknet-os = { workspace = true }
 starknet-settlement-client = { workspace = true }
 strum_macros = "0.26.4"
 thiserror = { workspace = true }
