--- a/crates/prover-services/prover-client-interface/Cargo.toml
+++ b/crates/prover-services/prover-client-interface/Cargo.toml
@@ -8,6 +8,6 @@ async-trait.workspace = true
 cairo-vm.workspace = true
 gps-fact-checker.workspace = true
 mockall.workspace = true
-snos.workspace = true
+starknet-os.workspace = true
 thiserror.workspace = true
 utils.workspace = true
