--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "stable"
-components = ["clippy", "rustfmt"]
+channel = "nightly-2024-05-02"
+components = ["rustfmt", "clippy"]
 targets = ["wasm32-unknown-unknown"]
