--- a/crates/prover-services/gps-fact-checker/Cargo.toml
+++ b/crates/prover-services/gps-fact-checker/Cargo.toml
@@ -16,7 +16,7 @@ alloy = { workspace = true, features = [
 async-trait.workspace = true
 cairo-vm.workspace = true
 itertools.workspace = true
-log = "0.4.21"
+log.workspace = true
 starknet.workspace = true
 thiserror.workspace = true
 url.workspace = true
