--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -12,7 +12,7 @@ color-eyre = { workspace = true }
 dotenv = "0.15"
 dotenvy = { workspace = true }
 lazy_static = "1.4.0"
-log = "0.4.21"
+log.workspace = true
 mockall = "0.12.1"
 reqwest = { version = "0.12.3" }
 rstest = { workspace = true }
