--- a/crates/prover-services/sharp-service/Cargo.toml
+++ b/crates/prover-services/sharp-service/Cargo.toml
@@ -14,7 +14,7 @@ gps-fact-checker.workspace = true
 hex.workspace = true
 httpmock.workspace = true
 lazy_static.workspace = true
-log = "0.4.21"
+log.workspace = true
 prover-client-interface.workspace = true
 reqwest.workspace = true
 rstest.workspace = true
