feat : added feature flag and refactored the code

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ SHARP_PROOF_LAYOUT=
 
 DA_LAYER=
 SETTLEMENT_LAYER=
-ETHEREUM_RPC_URL=
+SETTLEMENT_RPC_URL=
 MADARA_RPC_URL=
 MEMORY_PAGES_CONTRACT_ADDRESS=
 PRIVATE_KEY=
