--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -38,25 +38,6 @@ jobs:
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Check Anvil Installation
-        run: |
-          if command -v anvil &> /dev/null
-          then
-              echo "Anvil is installed. Version information:"
-              anvil --version
-          else
-              echo "Anvil is not installed or not in PATH"
-              exit 1
-          fi
-
-      - name: Running anvil
-        run: |
-          # Forking block number : 20607627 on Ethereum Mainnet
-          anvil --fork-url ${{ secrets.ETHEREUM_BLAST_RPC_URL }}@20607627 &
-
       - name: Run e2e test
         run: |
-          RUST_LOG=trace SETTLEMENT_LAYER=ethereum_test cargo test test_orchestrator_workflow -- --nocapture
+          RUST_LOG=trace SETTLEMENT_LAYER=ethereum_test cargo test --features testing test_orchestrator_workflow -- --nocapture
