--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ color-eyre = "0.6.2"
 c-kzg = "1.0.0"
 dotenvy = "0.15.7"
 futures = "0.3.30"
-mongodb = { version = "2.8.1" }
+mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
 omniqueue = { version = "0.2.0" }
 reqwest = { version = "0.11.24", features = ["rustls-tls", "native-tls"] }
 rstest = "0.18.2"
