--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ aws-sdk-sqs = "1.36.0"
 axum = { version = "0.7.4" }
 axum-macros = "0.4.1"
 bincode = "1.3.3"
+bytes = "1.6.0"
 color-eyre = "0.6.2"
 c-kzg = "1.0.0"
 dotenvy = "0.15.7"
