--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -10,7 +10,7 @@ aws-config.workspace = true
 aws-sdk-eventbridge.workspace = true
 aws-sdk-s3.workspace = true
 aws-sdk-sqs.workspace = true
-bytes = "1.6.0"
+bytes.workspace = true
 color-eyre.workspace = true
 dotenvy.workspace = true
 ethereum-settlement-client.workspace = true
@@ -19,6 +19,7 @@ log.workspace = true
 mongodb.workspace = true
 orchestrator.workspace = true
 reqwest = { workspace = true, features = ["json"] }
+rstest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 starknet.workspace = true
