--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ axum = { version = "0.7.4" }
 axum-macros = "0.4.1"
 bincode = "1.3.3"
 color-eyre = "0.6.2"
+chrono = "0.4.0"
 c-kzg = "1.0.0"
 dotenvy = "0.15.7"
 futures = "0.3.30"
