--- a/crates/prover-services/sharp-service/Cargo.toml
+++ b/crates/prover-services/sharp-service/Cargo.toml
@@ -8,6 +8,7 @@ alloy.workspace = true
 async-trait.workspace = true
 base64 = "0.22.1"
 cairo-vm.workspace = true
+color-eyre.workspace = true
 dotenvy.workspace = true
 gps-fact-checker.workspace = true
 hex.workspace = true
