--- a/crates/settlement-clients/settlement-client-interface/Cargo.toml
+++ b/crates/settlement-clients/settlement-client-interface/Cargo.toml
@@ -13,3 +13,4 @@ c-kzg = { workspace = true }
 color-eyre = { workspace = true }
 mockall = "0.12.1"
 starknet = { workspace = true }
+utils = { workspace = true }
