--- a/crates/da-clients/ethereum/Cargo.toml
+++ b/crates/da-clients/ethereum/Cargo.toml
@@ -15,14 +15,14 @@ alloy = { git = "https://github.com/alloy-rs/alloy", rev = "68952c0", features =
   "signer-wallet",
 ] }
 async-trait = { workspace = true }
-c-kzg = "1.0.0"
+c-kzg = { workspace = true }
 color-eyre = { workspace = true }
 da-client-interface = { workspace = true }
-dotenv = "0.15"
-mockall = "0.12.1"
-reqwest = { version = "0.12.3" }
+dotenvy.workspace = true
+mockall = { workspace = true }
+reqwest = { workspace = true }
 rstest = { workspace = true }
-serde = { version = "1.0.196", default-features = false, features = ["derive"] }
+serde = { workspace = true, default-features = false, features = ["derive"] }
 starknet = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
