--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -4,18 +4,18 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-alloy = { workspace = true, features = ["full", "node-bindings"] }
 alloy-primitives = { version = "0.7.7", default-features = false }
+
+alloy = { workspace = true, features = ["full", "node-bindings"] }
 async-trait = { workspace = true }
-c-kzg = "1.0.0"
+c-kzg = { workspace = true }
 color-eyre = { workspace = true }
-dotenv = "0.15"
 dotenvy = { workspace = true }
-lazy_static = "1.4.0"
-mockall = "0.12.1"
-reqwest = { version = "0.12.3" }
+lazy_static = { workspace = true }
+mockall = { workspace = true }
+reqwest = { workspace = true }
 rstest = { workspace = true }
-serde = { version = "1.0.196", default-features = false, features = ["derive"] }
+serde = { workspace = true, default-features = false, features = ["derive"] }
 settlement-client-interface = { workspace = true }
 snos = { workspace = true }
 tokio = { workspace = true }
