--- a/crates/settlement-clients/settlement-client-interface/Cargo.toml
+++ b/crates/settlement-clients/settlement-client-interface/Cargo.toml
@@ -11,5 +11,5 @@ async-trait = { workspace = true }
 axum = { workspace = true }
 c-kzg = { workspace = true }
 color-eyre = { workspace = true }
-mockall = "0.12.1"
+mockall = { workspace = true }
 starknet = { workspace = true }
