--- a/crates/settlement-clients/starknet/Cargo.toml
+++ b/crates/settlement-clients/starknet/Cargo.toml
@@ -5,12 +5,11 @@ edition.workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
-c-kzg = "1.0.0"
+c-kzg = { workspace = true }
 color-eyre = { workspace = true }
-dotenv = "0.15"
 lazy_static = { workspace = true }
-mockall = "0.12.1"
-reqwest = { version = "0.12.3" }
+mockall = { workspace = true }
+reqwest = { workspace = true }
 rstest = { workspace = true }
 serde = { workspace = true }
 settlement-client-interface = { workspace = true }
