updated code and fixed tests

--- a/.github/workflows/linters-cargo.yml
+++ b/.github/workflows/linters-cargo.yml
@@ -21,3 +21,5 @@ jobs:
           cargo fmt -- --check
           cargo clippy --no-deps -- -D warnings
           cargo clippy --tests --no-deps -- -D warnings
+          cargo clippy --features testing --no-deps -- -D warnings
+          cargo clippy --features testing --tests --no-deps -- -D warnings
