--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -11,6 +11,7 @@ aws-sdk-eventbridge.workspace = true
 aws-sdk-s3.workspace = true
 aws-sdk-sqs.workspace = true
 bytes.workspace = true
+chrono = { workspace = true }
 color-eyre.workspace = true
 dotenvy.workspace = true
 ethereum-settlement-client.workspace = true
