--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install build essentials
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
