--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install build essentials
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
