--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,10 +28,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install build essentials
+      - name: Install necessary deps
         run: |
           sudo apt update
-          sudo apt install -y build-essential
+          sudo apt install -y build-essential libssl-dev pkg-config
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
