--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install build essentials
         run: |
           sudo apt update
-          sudo apt install -y build-essential
+          sudo apt install -y build-essential libssl-dev pkg-config
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
