--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install build essentials
+      - name: Install necessary deps
         run: |
           sudo apt update
-          sudo apt install -y build-essential libssl-dev pkg-config
+          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
