--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   rust_build:
-    runs-on: self-hosted
+    runs-on: karnot-arc-runner-set
     steps:
       - uses: actions/checkout@v3
 
