--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install necessary deps
         run: |
           sudo apt update
-          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config
+          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config curl wget
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
