--- a/crates/prover-services/sharp-service/Cargo.toml
+++ b/crates/prover-services/sharp-service/Cargo.toml
@@ -23,10 +23,25 @@ serde_json.workspace = true
 snos.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
-tracing.workspace = true
 url.workspace = true
 utils.workspace = true
 uuid.workspace = true
+
+#Instrumentation
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+opentelemetry = { workspace = true, features = ["metrics", "logs"] }
+opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = { workspace = true, features = [
+  "tonic",
+  "metrics",
+  "logs",
+] }
+opentelemetry-semantic-conventions = { workspace = true }
+opentelemetry-appender-tracing = { workspace = true, default-features = false }
+tracing-core = { workspace = true, default-features = false }
+tracing-opentelemetry = "0.26.0"
+
 
 [dev-dependencies]
 tokio.workspace = true
